# simple_os_for_my_laptop

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  OS_EVALUATION_KR.md  OS_EVALUATION_REALISTIC_KR.md  README.md  TOUCHPAD_SUPPORT.md  build-bootimage.ps1  build.rs  roadmap.md
.cargo/: config.toml
docs/: README.md  architecture.md  daily-driver-requirements.md  low-power-stability-roadmap.md  phase15-summary.md  phase16-summary.md  phase17-summary.md  phase18-summary.md  phase2-summary.md  power-validation.md  requirements.md  runbooks.md  setup-guide.md  stability-power-improvements-phase2.md  stability-power-improvements-phase3.md  stability-power-improvements-phase4.md  stability-power-improvements-phase5.md  stability-power-improvements-phase6.md  stability-power-improvements.md  unsafe_validation_guide.md  usb-implementation-status.md
scripts/: README.md  baseline-measure.sh  collect-boot-timeline.sh  debug.ps1  debug.sh  power-test.sh  preflight.sh  run.ps1  run.sh  setup.ps1  setup.sh  stability-test.sh  suspend-test.sh
src/: crash.rs  lib.rs  logging.rs  main.rs
src/boot/: hw_probe.rs  info.rs  mod.rs  timeline.rs
src/config/: mod.rs  profile.rs
src/drivers/: ata.rs  font.rs  framebuffer.rs  i2c.rs  i2c_hid.rs  keyboard.rs  mod.rs  mouse.rs  pci.rs  rtl8139.rs  rtl8168.rs  serial.rs  timer.rs  touchpad.rs  vga.rs
src/drivers/audio/: hda.rs  hda_codec.rs  mod.rs  pcm.rs
src/drivers/display/: edid.rs
src/drivers/nvme/: mod.rs
src/fs/: cache.rs  fat32.rs  fsck.rs  journal.rs  mod.rs  path.rs  vfs.rs
src/gui/: compositor.rs  desktop.rs  desktop_manager.rs  mod.rs  widget.rs  window.rs
src/interrupts/: exception_recovery.rs  idt.rs  mod.rs  pic.rs
src/kernel/: error_recovery.rs  mod.rs  watchdog.rs
src/memory/: aslr.rs  compression.rs  fragmentation.rs  frame.rs  frame_cache.rs  guard.rs  heap.rs  leak_detector.rs  map.rs  mod.rs  oom_killer.rs  paging.rs  recovery.rs  slab.rs  stack_canary.rs  swap.rs
src/monitoring/: metrics.rs  mod.rs
src/net/: arp.rs  dhcp.rs  driver.rs  ethernet.rs  ethernet_frame.rs  firewall.rs  icmp.rs  ip.rs  mod.rs  tcp.rs  udp.rs
src/power/: acpi.rs  acpi_fadt.rs  battery.rs  cpu_usage.rs  device.rs  device_hooks.rs  device_policy.rs  idle.rs  manager.rs  mod.rs  monitor.rs  policy.rs  rapl.rs  scaling.rs  stats.rs  temps.rs  user_activity.rs
src/safety/: macros.rs  mod.rs  unsafe_validator.rs
src/scheduler/: context_switch.rs  load_balancer.rs  mod.rs  round_robin.rs  thread.rs
src/security/: acl.rs  mod.rs  permissions.rs  syscall_caps.rs  user.rs
src/shell/: command.rs  mod.rs
src/smp/: ap_boot.rs  apic.rs  cpu.rs  ipi.rs  mod.rs
src/sync/: mod.rs
src/syscall/: dispatcher.rs  handler.rs  implementations.rs  mod.rs  numbers.rs  validation.rs
tests/: README.md
tools/: generate_font.py
tools/create-bootimage/: Cargo.toml  main.rs
(+37 files in other folders)
