[package]
name = "simple_os"
version = "0.1.0"
edition = "2021"
authors = ["Simple OS Developers"]
license = "MIT OR Apache-2.0"
description = "A low-power operating system kernel written in Rust for laptops"

[lib]
crate-type = ["rlib"]

[dependencies]
bootloader_api = "0.11.12"
x86_64 = "0.14"
volatile = "0.4"
spin = "0.9"
uart_16550 = "0.2"
linked_list_allocator = "0.10"

[features]
# Boot profiles
balanced = []
power_saver = []
performance = []
headless = []

# Default to balanced if no profile is chosen
default = ["balanced"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.test]
panic = "abort"

[build-dependencies]
bootloader = "0.11.12"

[[bin]]
name = "simple_os"
path = "src/main.rs"