[package]
name = "simple_os"
version = "0.1.0"
edition = "2021"
authors = ["Simple OS Developers"]
license = "MIT OR Apache-2.0"
description = "A low-power operating system kernel written in Rust for laptops"

[lib]
crate-type = ["rlib"]

[dependencies]
bootloader_api = "0.11.12"
x86_64 = "0.14"
volatile = "0.4"
spin = "0.9"
uart_16550 = "0.2"
linked_list_allocator = "0.10"

[features]
# Boot profiles (runtime-controlled now). Keep only headless for optional UI-less builds.
headless = []

# Subsystem gates
net = []
fs = []
gui = []
touchpad = []
smp = []
usb = []
audio = []

# Storage / NIC / Security feature gates
nvme = []
net_r8168 = []
tls_strict = []

# Power feature gates
power_saver = []
intel_rapl = []

# Default enable common subsystems; audio/usb are opt-in for footprint/power
# Enable tls_strict by default; nvme and r8168 are opt-in until drivers land
default = ["net", "fs", "gui", "touchpad", "smp", "tls_strict"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.test]
panic = "abort"

[build-dependencies]
bootloader = "0.11.12"

[[bin]]
name = "simple_os"
path = "src/main.rs"